--- a/test.ipynb
+++ b/test.ipynb
@@ -5,7 +5,7 @@
    "id": "7ca6e1f3-1f55-4add-8a08-51cf9f883afb",
    "metadata": {},
    "source": [
-    "testing the instance generator..."
+    "Testing the instance generator..."
    ]
   },
   {
